--- a/main.css
+++ b/main.css
@@ -1,93 +1,79 @@
-/* custom property */
+/* NAVIGATION MENU */
 :root {
-	--accent-color: #800000;  /* could also be coded #800 */
-	--gradient-color: #f6bb73;
+    --light-menu: #ffffff;
+    --mid-menu: antiquewhite;
+    --dark-menu: #800000;
 }
 
-/* reset */
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+/* Main navbar */
+.navbar {
+    background-color: var(--accent-color);
 }
 
-/* default styles */
-body {
-	font-family: Arial, Helvetica, sans-serif;
-    font-size: 100%;
-	width: 80%;
-	margin: auto;
-	border: 2px solid var(--accent-color);
-}
-a:hover, a:focus{
-	font-style: italic;
-	color: var(--accent-color);
-}
-h1, h2, h3, p, ul {
-	padding: .5em 0;
-}
-h1 {
-	font-size: 150%;
-}
-h2 {
-	font-size: 130%;
-	color: var(--accent-color);
-}
-h3 {
-	font-size: 105%;
-}
-ul {
-	margin-left: 2em;
+.navbar a {
+    display: block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    color: var(--light-menu);
 }
 
-/* the styles for the header */
-header {
-	border-bottom: 2px solid var(--accent-color);
-	background-image: linear-gradient(
-	    30deg, var(--gradient-color) 0%, white 30%, white 65%, var(--gradient-color) 100%);
-	& h2 {
-		font-size: 175%;
-		padding: .5em 0 0 0;
-	}
-	& h3 {
-		font-size: 130%;
-		font-style: italic;
-		padding-bottom: 1em;
-	}
-	& img {
-		float: left;
-		margin: .75em 1em;
-	}
+.navbar a:hover,
+.navbar a:focus,
+.navbar a.current {
+    background-color: var(--mid-menu);
+    color: var(--dark-menu);
 }
 
-/* the styles for the main content */
-main {
-	padding: 0 1em 1em;
-	& h1 {
-		border-top: 2px solid var(--accent-color);
-		border-bottom: 2px solid var(--accent-color);
-	}
-	& blockquote {
-		font-style: italic;
-		padding-left: 1em;
-	}
-	& img {
-		border: 4px double var(--accent-color);
-		border-radius: 10px;
-	}
+/* Menu layout */
+.menu {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-/* the styles for the footer */
-footer {
-	background-color: var(--accent-color);
-	& p {
-		text-align: center;
-		color: white;
-		padding: 1em 0;
-	}
+.menu > li {
+    flex-basis: 20%;
+    text-align: center;
+    position: relative; /* for submenu */
 }
 
-/* CSS class */
-.large {
-	font-size: 125%;
+/* Submenu styling */
+.has-submenu > .submenu {
+    display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    background-color: var(--accent-color);
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.has-submenu:hover > .submenu {
+    display: block;
+}
+
+.submenu li a {
+    display: block;
+    padding: 0.5em 1em;
+    text-align: center;
+    color: var(--light-menu);
+    text-decoration: none;
+}
+
+.submenu li a:hover {
+    background-color: var(--mid-menu);
+    color: var(--dark-menu);
+}
+
+/* Small triangle next to menu items */
+.has-submenu a small {
+    margin-left: 0.25em;
+}
+
+/* Bullet list circles */
+ul.circle {
+    list-style-type: circle;
 }
